// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox/> render a checked checkbox 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#b8bab8",
        "borderRadius": 4,
        "borderWidth": 2,
        "padding": 2,
        "position": "relative",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "#b8bab8",
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    >
      <RNSVGPath
        d="M22.9 3.7l-15.2 16.6-6.6-7.1"
        propList={
          Array [
            "stroke",
            "strokeWidth",
            "strokeDashoffset",
            "strokeMiterlimit",
          ]
        }
        stroke={4280363313}
        strokeDashoffset={null}
        strokeMiterlimit={10}
        strokeWidth={3}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`<Checkbox/> render an unchecked checkbox 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#b8bab8",
        "borderRadius": 4,
        "borderWidth": 2,
        "padding": 2,
        "position": "relative",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGSvgView>
</View>
`;

exports[`<Checkbox/> render an unchecked checkbox by default 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#b8bab8",
        "borderRadius": 4,
        "borderWidth": 2,
        "padding": 2,
        "position": "relative",
        "zIndex": 1,
      },
      Object {
        "backgroundColor": "transparent",
      },
    ]
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    fill="none"
    focusable={false}
    height={24}
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGSvgView>
</View>
`;
